Add media queries mixin for responsive design.

--- a/poker-planning/src/scss/mixins/_mixins.scss
+++ b/poker-planning/src/scss/mixins/_mixins.scss
@@ -20,6 +20,7 @@
 @import 'placeholder';
 @import 'position';
 @import 'prevent-hover';
+@import 'media-queries';
 // @import 'rem';
 @import 'rotate';
 @import 'text-shadow';
