--- a/poker-planning/src/scss/styles.scss
+++ b/poker-planning/src/scss/styles.scss
@@ -7,9 +7,11 @@
 
 //pages
 @import './pages/login.scss';
+@import './pages/signup.scss';
 
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
