--- a/poker-planning/src/scss/components/button.scss
+++ b/poker-planning/src/scss/components/button.scss
@@ -9,4 +9,11 @@
     padding-bottom: 20px;
     border-radius: 6px;
     text-align: center;
+    transition: 0.5s;
+
+    &:hover {
+        background-color: white;
+        color: black;
+        border: 1px solid black;
+    }
 }
