--- a/poker-planning/src/scss/pages/create-session.scss
+++ b/poker-planning/src/scss/pages/create-session.scss
@@ -25,7 +25,7 @@
 
             &__inputfields {
                 border-radius: 6px;
-                border: 1px solid black;
+                border: 1px solid #ccc;
                 display: flex;
                 flex-direction: column;
                 padding: 10px;
