--- a/poker-planning/src/scss/pages/create-session.scss
+++ b/poker-planning/src/scss/pages/create-session.scss
@@ -9,7 +9,6 @@
     &__heading {
         text-align: left;
         background-color: silver;
-        margin-bottom: 15px;
         padding: 10px 0px 10px 5px;
     }
 
@@ -18,6 +17,11 @@
 
         @include respond-to-above(tablet) {
             padding: 20px;
+        }
+
+        .inputFieldWithBorder {
+            margin-bottom: 30px;
+            margin-top: 30px;
         }
 
         &__storypoint {
