poker-planning frontend.

--- a/poker-planning/src/scss/components/button.scss
+++ b/poker-planning/src/scss/components/button.scss
@@ -10,6 +10,7 @@
     border-radius: 6px;
     text-align: center;
     transition: 0.5s;
+    max-height: 22px;
 
     &:hover {
         background-color: white;
