--- a/poker-planning/src/scss/components/members.scss
+++ b/poker-planning/src/scss/components/members.scss
@@ -1,3 +1,10 @@
 .member {
     padding: 10px 10px;
+    display: flex;
+    justify-content: space-between;
+    
+    .actions {
+        display: flex;
+        gap: 10px;
+    }
 }
