--- a/poker-planning/src/scss/components/memeber-list.scss
+++ b/poker-planning/src/scss/components/memeber-list.scss
@@ -8,6 +8,11 @@
         padding: 10px 5px;
     }
 
+    &__dropdown {
+        cursor: pointer;
+        font-size: 25px;
+    }
+
     &__title {
         letter-spacing: 0.5px;
         font-weight: 600;
