--- a/poker-planning/src/scss/pages/dashboard.scss
+++ b/poker-planning/src/scss/pages/dashboard.scss
@@ -22,10 +22,47 @@
             font-weight: 600;
             margin-bottom: 20px;
         } 
+
+        &__button {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            
+        }
+    }
+    
+    .storypoint-list {
+        margin-bottom: 15px;
+    }
+
+    &__userstory {
+        margin-bottom: 45px;
+        
+        &__title {
+            font-size: 35px;
+            font-weight: 600;
+        }
+
+        &__description {
+            font-size: 25px;
+            font-weight: 400;
+        }
+    }
+
+    .member-list {
+        grid-column: 1/1;
+    }
+
+    .points-display {
+        margin-top: 15px;
+        grid-column: 2/4;
     }
 
     &__storypoints {
-
+        // position: absolute;
+        // top: 50%;
+        // left: 50%;
+        // transform: translate(-50%, -50%);
         @include respond-to-above(desktop) {
             grid-column: 2/4;
         }
