--- a/poker-planning/src/scss/styles.scss
+++ b/poker-planning/src/scss/styles.scss
@@ -10,12 +10,15 @@
 @import './components/memeber-list.scss';
 @import './components/button-action.scss';
 @import './components/storypoint-list.scss';
+@import './components/navbar.scss';
+@import './components/point-display.scss';
 
 //pages
 @import './pages/login.scss';
 @import './pages/signup.scss';
 @import './pages/create-session.scss';
 @import './pages/dashboard.scss';
+@import './pages/session-history.scss';
 
 * {
     margin: 0;
@@ -30,5 +33,10 @@ body {
 .container {
     padding-left: 20px;
     padding-right: 20px;
-    padding-top: 40px;
+    padding-top: 20px;
+
+    @include respond-to-above(desktop) {
+        padding-left: 40px;
+        padding-right: 40px;
+    }
 }
